--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?><resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
+<?xml version="1.0" encoding="UTF-8"?>
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
 
     <!-- ####################################
                Preference Keys
@@ -1083,5 +1084,13 @@
     <string name="test_api_body_other_keys">"Other key"</string>
     <!-- NOTR -->
     <string name="test_api_calculate_risk_level">"Calculate Risk Level"</string>
+
+    <!-- ####################################
+         Coronalert
+    ##################################### -->
+    <string name="submission_test_request_headline">Get tested</string>
+    <string name="submission_test_request_text">Select the date on which you became contagious. This will be communicated to you by the person doing the test.</string>
+    <string name="submission_test_request_save_text">Show this number to the person doing the test. Tap "Save" so you can be notified as soon as the test result is available.</string>
+    <string name="submission_test_request_save_button_save">Save</string>
 
 </resources>
