--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -1088,6 +1088,11 @@
     <!-- ####################################
          Coronalert
     ##################################### -->
+
+    <string name="preference_r0"><xliff:g id="preference">"preference_r0"</xliff:g></string>
+    <string name="preference_t0"><xliff:g id="preference">"preference_t0"</xliff:g></string>
+    <string name="preference_t3"><xliff:g id="preference">"preference_t3"</xliff:g></string>
+
     <string name="submission_test_request_headline">Get tested</string>
     <string name="submission_test_request_text">Select the date on which you became contagious. This will be communicated to you by the person doing the test.</string>
     <string name="submission_test_request_save_text">Show this number to the person doing the test. Tap "Save" so you can be notified as soon as the test result is available.</string>
