--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -557,4 +557,17 @@
     <string name="settings_tracing_status_location_body">Your location cannot be accessed. Google and/or Android requires access to your device\'s location to use Bluetooth.</string>
     <string name="settings_tracing_status_location_button">Open Device Settings</string>
     <string name="settings_tracing_location_illustration_description_inactive"></string>
+  
+    <!-- ####################################
+         Coronalert
+    ##################################### -->
+
+    <string name="preference_r0"><xliff:g id="preference">"preference_r0"</xliff:g></string>
+    <string name="preference_t0"><xliff:g id="preference">"preference_t0"</xliff:g></string>
+    <string name="preference_t3"><xliff:g id="preference">"preference_t3"</xliff:g></string>
+
+    <string name="submission_test_request_headline">Get tested</string>
+    <string name="submission_test_request_text">Select the date on which you became contagious. This will be communicated to you by the person doing the test.</string>
+    <string name="submission_test_request_save_text">Show this number to the person doing the test. Tap "Save" so you can be notified as soon as the test result is available.</string>
+    <string name="submission_test_request_save_button_save">Save</string>
 </resources>
