--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -569,6 +569,12 @@
     <string name="preference_k"><xliff:g id="preference">"preference_k"</xliff:g></string>
     <string name="preference_result_channel"><xliff:g id="preference">"preference_result_channel"</xliff:g></string>
 
+    <string name="submission_intro_symptoms_dialog_title">Symptoms</string>
+    <string name="submission_intro_symptoms_dialog_body">Do you currently have symptoms?</string>
+    <string name="submission_intro_symptoms_dialog_positive">Yes</string>
+    <string name="submission_intro_symptoms_dialog_negative">No</string>
+
+
     <string name="submission_test_request_headline">Get tested</string>
     <string name="submission_test_request_text">Select the date on which you became contagious. This will be communicated to you by the person doing the test.</string>
     <string name="submission_test_request_save_text">Show this number to the person doing the test. Tap "Save" so you can be notified as soon as the test result is available.</string>
