--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -567,7 +567,7 @@
     <string name="preference_t0"><xliff:g id="preference">"preference_t0"</xliff:g></string>
     <string name="preference_t3"><xliff:g id="preference">"preference_t3"</xliff:g></string>
     <string name="preference_k"><xliff:g id="preference">"preference_k"</xliff:g></string>
-    <string name="preference_result_channel"><xliff:g id="preference">"preference_result_channel"</xliff:g></string>
+    <string name="preference_result_channel"><xliff:g id="preference">preference_result_channel</xliff:g></string>
 
     <string name="submission_intro_symptoms_dialog_title">Symptoms</string>
     <string name="submission_intro_symptoms_dialog_body">Do you currently have symptoms?</string>
@@ -579,4 +579,9 @@
     <string name="submission_test_request_text">Select the date on which you became contagious. This will be communicated to you by the person doing the test.</string>
     <string name="submission_test_request_save_text">Show this number to the person doing the test. Tap "Save" so you can be notified as soon as the test result is available.</string>
     <string name="submission_test_request_save_button_save">Save</string>
+
+    <string name="submission_countries_selection_headline">Select countries</string>
+    <string name="submission_countries_selection_text">For each of the below dates, if you have not been in Belgium and you would like to share this information (anonymously), please select the country you visited on that date by tapping the line you want to change</string>
+    <string name="submission_countries_selection_dialog_title">Choose a country</string>
+
 </resources>
