--- a/Corona-Warn-App/src/main/res/values-nl/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-nl/strings.xml
@@ -217,7 +217,7 @@
     <string name="risk_details_headline_period_logged">Geregistreerde periode</string>
     <string name="risk_details_subtitle_period_logged">Deze periode is opgenomen in de berekening.</string>
     <string name="risk_details_information_body_period_logged">Uw risico op een besmetting kan alleen worden berekend voor perioden waarin de contacttracing actief was. De contacttracing moet daarom permanent actief blijven.</string>
-    <string name="risk_details_information_body_period_logged_assessment">De contacttracing dekt de voorbije 14 dagen. De contacttracing op uw toestel was tijdens deze periode %2$u dagen actief. De app verwijdert automatisch oudere registraties, omdat ze niet langer relevant zijn voor het voorkomen van besmettingen.</string>
+    <string name="risk_details_information_body_period_logged_assessment">De contacttracing dekt de voorbije 14 dagen. De contacttracing op uw toestel was tijdens deze periode %1$s dagen actief. De app verwijdert automatisch oudere registraties, omdat ze niet langer relevant zijn voor het voorkomen van besmettingen.</string>
     <string name="risk_details_subtitle_infection_risk_past">Zo werd uw risico berekend</string>
     <string name="risk_details_subtitle_infection_risk">Zo wordt uw risico berekend</string>
     <string name="risk_details_information_body_unknown_risk">U heeft de contacttracing niet lang genoeg aangezet. Daarom kunnen we uw risico op een besmetting niet berekenen.</string>
