--- a/Corona-Warn-App/src/main/res/values-fr/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-fr/strings.xml
@@ -388,7 +388,7 @@
     <string name="information_technical_html_path">technical_en.html</string>
     <string name="information_legal_title">Mentions légales</string>
     <string name="information_legal_headline_publisher">Publié par</string>
-    <string name="information_legal_subtitle_publisher">(responsable conformément au § 5, alinéa 1 TMG, article 55, paragraphe 1, de la loi sur les télécommunications). 1 RStV, DS-GVO, BDSG)</string>
+    <string name="information_legal_subtitle_publisher"></string>
     <string name="information_legal_body_publisher">Sciensano<xliff:g id="line_break">
 </xliff:g>14 rue Juliette Wytsman<xliff:g id="line_break">
 </xliff:g>1050 Bruxelles<xliff:g id="line_break">
@@ -405,27 +405,27 @@
     <string name="submission_error_dialog_web_generic_error_body">La connexion n\'a pu être établie. Veuillez réessayer.</string>
     <string name="submission_error_dialog_web_generic_error_button_positive">Retour</string>
     <string name="submission_error_dialog_web_test_paired_title">Erreur</string>
-    <string name="submission_error_dialog_web_test_paired_body">Le QR code/ CODE n\'est pas valide ou a déjà été utilisé. Veuillez réessayer ou contacter la ligne d\'assistance technique via App Information Technical Hotline.</string>
+    <string name="submission_error_dialog_web_test_paired_body"></string>
     <string name="submission_error_dialog_web_test_paired_button_positive">Retour</string>
     <string name="submission_error_dialog_web_paring_invalid_title">Erreur</string>
-    <string name="submission_error_dialog_web_paring_invalid_body">Il n\'a pas été possible de générer un CODE. Veuillez contacter le numéro d\'information via Informations sur l\'Application → Assistance technique.</string>
+    <string name="submission_error_dialog_web_paring_invalid_body"></string>
     <string name="submission_error_dialog_web_paring_invalid_button_positive">Retour</string>
     <string name="submission_error_dialog_web_tan_invalid_title">Erreur</string>
-    <string name="submission_error_dialog_web_tan_invalid_body">Il n\'a pas été possible de générer un Code pour la soumission. Veuillez contacter le numéro d\'information via Informations sur l\'Application → Assistance technique.</string>
+    <string name="submission_error_dialog_web_tan_invalid_body"></string>
     <string name="submission_error_dialog_web_tan_invalid_button_positive">Retour</string>
-    <string name="submission_qr_code_scan_permission_rationale_dialog_headline">Autorisation d\'utilisation de l\'appareil photo requise</string>
-    <string name="submission_qr_code_scan_permission_rationale_dialog_body">Permettre à l\'application d\'utiliser l\'appareil photo pour scanner le QR code.</string>
-    <string name="submission_qr_code_scan_permission_rationale_dialog_button_positive">Autoriser</string>
-    <string name="submission_qr_code_scan_permission_rationale_dialog_button_negative">Ne pas autoriser</string>
-    <string name="submission_qr_code_scan_permission_denied_dialog_headline">Accès à l\'appareil photo nécessaire</string>
-    <string name="submission_qr_code_scan_permission_denied_dialog_body">Veuillez modifier les réglages pour permettre à l\'application d\'utiliser l\'appareil photo et scanner le QR code.</string>
-    <string name="submission_qr_code_scan_permission_denied_dialog_button">OK</string>
-    <string name="submission_qr_code_scan_invalid_dialog_headline">QR code incorrect</string>
-    <string name="submission_qr_code_scan_invalid_dialog_body">Le QR code n\'est pas correct. Veuillez réessayer.</string>
-    <string name="submission_qr_code_scan_invalid_dialog_button_positive">Veuillez réessayer.</string>
-    <string name="submission_qr_code_scan_invalid_dialog_button_negative">Annuler</string>
-    <string name="submission_qr_code_scan_title">Positionnez le QR code dans le cadre.</string>
-    <string name="submission_qr_code_scan_body">Positionnez le QR code dans le cadre.</string>
+    <string name="submission_qr_code_scan_permission_rationale_dialog_headline"></string>
+    <string name="submission_qr_code_scan_permission_rationale_dialog_body"></string>
+    <string name="submission_qr_code_scan_permission_rationale_dialog_button_positive"></string>
+    <string name="submission_qr_code_scan_permission_rationale_dialog_button_negative"></string>
+    <string name="submission_qr_code_scan_permission_denied_dialog_headline"></string>
+    <string name="submission_qr_code_scan_permission_denied_dialog_body"></string>
+    <string name="submission_qr_code_scan_permission_denied_dialog_button"></string>
+    <string name="submission_qr_code_scan_invalid_dialog_headline"></string>
+    <string name="submission_qr_code_scan_invalid_dialog_body"></string>
+    <string name="submission_qr_code_scan_invalid_dialog_button_positive"></string>
+    <string name="submission_qr_code_scan_invalid_dialog_button_negative"></string>
+    <string name="submission_qr_code_scan_title"></string>
+    <string name="submission_qr_code_scan_body"></string>
     <string name="submission_test_result_headline">Résultat du test</string>
     <string name="submission_test_result_subtitle">Comment cela fonctionne :</string>
     <string name="submission_test_result_steps_added_heading">Test ajouté avec succès</string>
@@ -456,31 +456,31 @@
     <string name="submission_test_result_dialog_remove_test_button_negative">Annuler</string>
     <string name="submission_test_result_card_positive_title">SARS-CoV-2 positif</string>
     <string name="submission_test_result_card_positive_body">Votre diagnostic est positif au SRAS-CoV-2.</string>
-    <string name="submission_tan_title">Entrer CODE</string>
-    <string name="submission_tan_body">Veuillez saisir le code qui vous a été attribué.</string>
-    <string name="submission_tan_button_text">Suivant</string>
-    <string name="submission_tan_accessibility_title">Saisie du CODE</string>
-    <string name="submission_tan_error">Code non valide, veuillez vérifier votre entrée.</string>
-    <string name="submission_tan_character_error">Entrée non valide. Veuillez vérifier votre code.</string>
+    <string name="submission_tan_title"></string>
+    <string name="submission_tan_body"></string>
+    <string name="submission_tan_button_text"></string>
+    <string name="submission_tan_accessibility_title"></string>
+    <string name="submission_tan_error"></string>
+    <string name="submission_tan_character_error"></string>
     <string name="submission_intro_title">Je souhaite faire mon test ?</string>
     <string name="submission_intro_headline">Voici comment fonctionne l\'application Coronalert</string>
     <string name="submission_intro_text">Pour que l\'application fonctionne bien, nous comptons sur le soutien des personnes qui ont été diagnostiquées positives au COVID-19. Puisque seules des identités aléatoires cryptées sont échangées, vous restez anonyme. Vous pouvez maintenant procéder comme suit :</string>
     <string name="submission_intro_button_next">Suivant</string>
     <string name="submission_intro_illustration_description">Un diagnostic positif crypté est transmis au système, qui avertit alors les autres utilisateurs.</string>
     <string name="submission_intro_accessibility_title">Je souhaite faire mon test ? Voici comment fonctionne l\'application Coronalert</string>
-    <string name="submission_dispatcher_headline">Sélection</string>
-    <string name="submission_dispatcher_subheadline">Quelles sont les informations dont vous disposez ?</string>
-    <string name="submission_dispatcher_card_qr">Document avec un QR code </string>
-    <string name="submission_dispatcher_qr_card_text">Enregistrez votre test en scannant le QR code de votre document de test.</string>
-    <string name="submission_dispatcher_qr_privacy_dialog_headline">Déclaration de consentement</string>
-    <string name="submission_dispatcher_qr_privacy_dialog_body">En appuyant sur Accepter, vous consentez à ce que l\'application interroge le statut de votre test coronavirus et l\'affiche dans l\'application. Cette fonction est disponible si vous avez reçu un QR code et si vous avez consenti à ce que le résultat de votre test soit transmis au serveur de l\'application. Dès que le laboratoire de test a stocké votre résultat sur le serveur, vous pourrez le voir dans l\'application. Si vous avez activé les notifications, vous recevrez également une notification en dehors de l\'application vous informant que votre résultat de test a été reçu. Toutefois, pour des raisons de confidentialité, le résultat du test lui-même ne sera affiché que dans l\'application. Vous pouvez retirer ce consentement à tout moment en supprimant votre inscription au test dans l\'application. Le retrait de votre consentement n\'affectera pas la légalité du traitement avant son retrait. Vous trouverez de plus amples informations dans la rubrique Informations sur la protection des données.</string>
-    <string name="submission_dispatcher_qr_privacy_dialog_button_positive">Accepter</string>
-    <string name="submission_dispatcher_qr_privacy_dialog_button_negative">Ne pas accepter</string>
-    <string name="submission_dispatcher_card_tan_code">CODE</string>
-    <string name="submission_dispatcher_tan_code_card_text">Enregistrez votre test en saisissant manuellement votre CODE.</string>
-    <string name="submission_dispatcher_card_tan_tele">Demande de CODE</string>
-    <string name="submission_dispatcher_tan_tele_card_text">Appelez-nous si vous avez été diagnostiqué positif au COVID-19.</string>
-    <string name="submission_dispatcher_accessibility_title">Quelles sont les informations dont vous disposez ?</string>
+    <string name="submission_dispatcher_headline"></string>
+    <string name="submission_dispatcher_subheadline"></string>
+    <string name="submission_dispatcher_card_qr"></string>
+    <string name="submission_dispatcher_qr_card_text"></string>
+    <string name="submission_dispatcher_qr_privacy_dialog_headline"></string>
+    <string name="submission_dispatcher_qr_privacy_dialog_body"></string>
+    <string name="submission_dispatcher_qr_privacy_dialog_button_positive"></string>
+    <string name="submission_dispatcher_qr_privacy_dialog_button_negative"></string>
+    <string name="submission_dispatcher_card_tan_code"></string>
+    <string name="submission_dispatcher_tan_code_card_text"></string>
+    <string name="submission_dispatcher_card_tan_tele"></string>
+    <string name="submission_dispatcher_tan_tele_card_text"></string>
+    <string name="submission_dispatcher_accessibility_title"></string>
     <string name="submission_positive_other_warning_title">Avertir les autres</string>
     <string name="submission_positive_other_warning_headline">Ensemble, luttons contre le virus !</string>
     <string name="submission_positive_other_warning_body">À présent, l\'application Coronalert partage vos identifiants aléatoires des 14 derniers jours avec d\'autres utilisateurs. En faisant cela, vous pouvez avertir d\'autres personnes et nous aider à briser la chaîne d\'infection. Puisque seules des identités aléatoires impersonnelles sont transmises, votre identité restera anonyme.</string>
@@ -498,24 +498,19 @@ La transmission de votre résultat de test via l\'application est volontaire. Vo
     <string name="submission_done_further_info_title">Autres informations :</string>
     <string name="submission_done_button_done">Terminé</string>
     <string name="submission_done_illustration_description">Tout le monde dans le groupe applaudit parce que quelqu\'un a partagé le résultat de son test.</string>
-    <string name="submission_contact_title">Demander un Code</string>
-    <string name="submission_contact_headline">Comment cela fonctionne :</string>
-    <string name="submission_contact_body">Veuillez garder votre résultat de test (si disponible) et votre numéro de téléphone à portée de main pour demander un CODE.</string>
-    <string name="submission_contact_button_call">Appelez</string>
-    <string name="submission_contact_button_enter">Entrez votre CODE</string>
-    <string name="submission_contact_step_1_body">Appelez le numéro d\'information et demandez un CODE:</string>
-    <string name="submission_contact_number_display">0800 14 689</string>
-    <string name="submission_contact_number_dial">0800 14 689</string>
-    <string name="submission_contact_step_2_body">Enregistrez le test en entrant le CODE dans l\'application.</string>
-    <string name="submission_contact_operating_hours_body">Les langues :
-allemand, anglais, français, néerlandais
-
-Horaires d\'ouverture : du lundi au dimanche de 9h à 17h
-
-L\'appel est gratuit.</string>
-    <string name="submission_contact_accessibility_title">Appelez le numéro d\'information et demandez un CODE</string>
-    <string name="submission_contact_step_1_content">Première étape, vous appelez le numéro d\'information et demandez votre CODE. Vous pouvez joindre ce numéro au 0800 14 689. Les heures d\'ouverture sont du lundi au vendredi de 9h à 17h. L\'appel est gratuit.</string>
-    <string name="submission_contact_step_2_content">Deuxième étape, vous enregistrez votre test avec votre CODE dans l\'application.</string>
+    <string name="submission_contact_title"></string>
+    <string name="submission_contact_headline"></string>
+    <string name="submission_contact_body"></string>
+    <string name="submission_contact_button_call"></string>
+    <string name="submission_contact_button_enter"></string>
+    <string name="submission_contact_step_1_body"></string>
+    <string name="submission_contact_number_display"></string>
+    <string name="submission_contact_number_dial"></string>
+    <string name="submission_contact_step_2_body"></string>
+    <string name="submission_contact_operating_hours_body"></string>
+    <string name="submission_contact_accessibility_title"></string>
+    <string name="submission_contact_step_1_content"></string>
+    <string name="submission_contact_step_2_content"></string>
     <string name="submission_status_card_title_fetching">Données en cours de récupération....</string>
     <string name="submission_status_card_title_unregistered">Je souhaite faire mon test ?</string>
     <string name="submission_status_card_title_pending">Votre résultat n\'est pas encore disponible</string>
@@ -570,7 +565,7 @@ L\'appel est gratuit.</string>
     <string name="test_api_button_get_exposure_keys">Get Exposure keys (my keys history from api)</string>
     <string name="test_api_button_share_my_keys">Share my keys via Email</string>
     <string name="test_api_button_enter_other_keys">Submit Exposure Key</string>
-    <string name="test_api_button_show_qr_code">Show QR Code</string>
+    <string name="test_api_button_show_qr_code"></string>
     <string name="test_api_button_submit_keys">Submit keys to Server</string>
     <string name="test_api_button_scan_qr_code">Scan Exposure Key</string>
     <string name="test_api_switch_last_three_hours_from_server">Last 3 Hours Mode</string>
@@ -593,29 +588,52 @@ L\'appel est gratuit.</string>
     <string name="settings_tracing_status_location_button">Ouvrir les réglages du téléphone</string>
     <string name="settings_tracing_location_illustration_description_inactive"></string>
     <string name="preference_r0">
-    <xliff:g id="preference">\"preference_r0\"</xliff:g>
+    <xliff:g id="preference">preference_r0</xliff:g>
   </string>
     <string name="preference_t0">
-    <xliff:g id="preference">\"preference_t0\"</xliff:g>
+    <xliff:g id="preference">preference_t0</xliff:g>
   </string>
     <string name="preference_t3">
-    <xliff:g id="preference">\"preference_t3\"</xliff:g>
+    <xliff:g id="preference">preference_t3</xliff:g>
   </string>
     <string name="preference_k">
-    <xliff:g id="preference">\"preference_k\"</xliff:g>
+    <xliff:g id="preference">preference_k</xliff:g>
   </string>
     <string name="preference_result_channel">
-    <xliff:g id="preference">\"preference_result_channel\"</xliff:g>
+    <xliff:g id="preference">preference_result_channel</xliff:g>
   </string>
     <string name="submission_intro_symptoms_dialog_title">Symptômes</string>
     <string name="submission_intro_symptoms_dialog_body">Présentez-vous actuellement des symptômes ?</string>
     <string name="submission_intro_symptoms_dialog_positive">Oui</string>
     <string name="submission_intro_symptoms_dialog_negative">Non</string>
     <string name="submission_test_request_headline">Faites un test</string>
-    <string name="submission_test_request_text">Sélectionnez la date à laquelle vous êtes devenu contagieux. Cette date vous sera communiquée par la personne en charge du test.</string>
+    <string name="submission_test_request_text">Sélectionnez la date à laquelle vous avez commencé à avoir des symptômes. Celle-ci vous sera communiquée par la personne qui effectue le test.</string>
     <string name="submission_test_request_save_text">Montrez ce numéro à la personne qui vous fera le test. Cliquez sur \"sauvegarder\" pour être averti dès que le résultat sera disponible.</string>
     <string name="submission_test_request_save_button_save">Sauvegarder</string>
     <string name="submission_countries_selection_headline">Sélectionnez votre pays</string>
     <string name="submission_countries_selection_text">Si vous n\'étiez pas en Belgique à certaines des dates ci-dessous et que vous voulez partager cette information (de façon anonyme), veuillez sélectionner le pays dans lequel vous étiez à ces dates.</string>
     <string name="submission_countries_selection_dialog_title">Choisissez un pays</string>
+    <string name="preference_background_check_done"></string>
+    <string name="risk_card_body_open_daily"></string>
+    <string name="risk_details_information_body_notice_low"></string>
+    <string name="risk_details_information_body_notice_increased"></string>
+    <string name="onboarding_energy_optimized_dialog_headline"></string>
+    <string name="onboarding_energy_optimized_dialog_body"></string>
+    <string name="onboarding_energy_optimized_dialog_button_positive"></string>
+    <string name="onboarding_energy_optimized_dialog_button_negative"></string>
+    <string name="onboarding_manual_required_dialog_headline"></string>
+    <string name="onboarding_manual_required_dialog_body"></string>
+    <string name="onboarding_manual_required_dialog_button"></string>
+    <string name="submission_error_dialog_web_tan_redeemed_title"></string>
+    <string name="submission_error_dialog_web_tan_redeemed_body"></string>
+    <string name="submission_error_dialog_web_tan_redeemed_button_positive"></string>
+    <string name="onboarding_tracing_easy_language_explanation"></string>
+    <string name="information_legal_subtitle_contact_form"></string>
+    <string name="information_legal_subtitle_contact_form_non_en_de"></string>
+    <string name="preference_background_notification"></string>
+    <plurals name="risk_card_body_contact_value_high_risk">
+        <item quantity="one"></item>
+        <item quantity="other"></item>
+    </plurals>
+    <string name="preference_dummy_test_requests_to_send"></string>
 </resources>
