--- a/Corona-Warn-App/src/main/res/values-pl/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-pl/strings.xml
@@ -1127,5 +1127,7 @@
     <string name="test_api_body_other_keys">"Other key"</string>
     <!-- NOTR -->
     <string name="test_api_calculate_risk_level">"Calculate Risk Level"</string>
+    <string name="preference_background_notification"><xliff:g id="preference">preference_background_notification</xliff:g></string>
+    <string name="preference_dummy_test_requests_to_send">preference_dummy_test_requests_to_send</string>
 
 </resources>
